RESOLVED FIXED95777
IndexedDB: IDBRequest leaks if IDBCursor closes and no further events fired
https://bugs.webkit.org/show_bug.cgi?id=95777
Summary IndexedDB: IDBRequest leaks if IDBCursor closes and no further events fired
Joshua Bell
Reported 2012-09-04 13:43:16 PDT
IndexedDB: IDBRequest leaks if IDBCursor closes and no further events fired
Attachments
Patch (1.84 KB, patch)
2012-09-04 13:48 PDT, Joshua Bell
no flags
Patch (1.85 KB, patch)
2012-09-04 15:16 PDT, Joshua Bell
no flags
Joshua Bell
Comment 1 2012-09-04 13:48:49 PDT
Joshua Bell
Comment 2 2012-09-04 15:08:40 PDT
dgrogan@ - can you take a look?
Joshua Bell
Comment 3 2012-09-04 15:14:38 PDT
*sigh* - Digging back through history, finishCursor used to read: void IDBRequest::finishCursor() { m_cursorFinished = true; if (m_readyState != PENDING) m_requestFinished = true; } It looks like http://trac.webkit.org/changeset/123275 introduced this, and the partial reversion in http://trac.webkit.org/changeset/126254 really should have reintroduced this change, but did not. The m_readyState != PENDING actually looks better, so I'll re-up the patch.
Joshua Bell
Comment 4 2012-09-04 15:16:17 PDT
David Grogan
Comment 5 2012-09-04 15:16:43 PDT
Comment on attachment 162107 [details] Patch LGTM
Joshua Bell
Comment 6 2012-09-04 15:18:07 PDT
tony@ - r?
WebKit Review Bot
Comment 7 2012-09-04 16:33:55 PDT
Comment on attachment 162107 [details] Patch Clearing flags on attachment: 162107 Committed r127518: <http://trac.webkit.org/changeset/127518>
WebKit Review Bot
Comment 8 2012-09-04 16:33:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.